18/03/2009:
	- Added modification timestamps to the IIPImage and Rawtile classes.
	  The TileManager now checks whether the tile is fresh and reloads it
	  if necessary.


11/03/2009:
	- Several changes to JTL.cc and Cache.h to eliminate a memory leak. Also
	  replaced malloc/free in Rawtile with new/delete.


04/03/2009:
	- Minor changes to IIPResponse.cc to elimate type warnings.


06/06/2008:
	- Modifed the way the image dimensions are stored in the IIPImage class.
	  Rather than simply storing the max size, a vector of available dimensions
	  is saved making it easier to get the size for a given resolution.


05/06/2008:
	- Added Zoomify support via the Zoomify=/path.tif request. Works with both
	  the official flash client and the Zoomify patched OpenLayers javascript
	  client. Work carried out thanks to R&D grant DC08P02OUK006 - Old Maps
	  Online (www.oldmapsonline.org) from Ministry of Culture of the Czech Republic.


09/08/2007:
	- Added a Bits-per-channel OBJ request so that viewers can determine whether
	  to perform contrast adjustment server-side or client-side.


07/08/2007:
	- Added CIELAB conversion and contrast handling to JTL so that it can handle
	  16 bit images.


12/06/2007:
	- Updated URL decoding function in FIF.cc to C++ style and avoid a potential
	  buffer overflow.
	- Changed Task::run arguments to be const std::string& instead of just std::string.


08/06/2007:
	- Changed JTL headers to enable HTTP 1.1 compatible cache control.


13/12/2006: Version 0.9.7 Released


07/11/2006:
	- Fixed the standalone mode, which is now activated by launching with
	  --standalone with an argument giving the socket port or path. For example,
	  localhost:8000 or /tmp/iipsrv.sock.


31/10/2006:
	- Added hillshading Task class and function for simulated raking light
	  visualization using 3D surface normal data. This is used via the SHD
	  command in association with CVT, which takes 2 arguments: the horizontal